cluster sampling / new jooq version

--- a/calc-webapp/src/main/webapp/html/settings/sampling-design.html
+++ b/calc-webapp/src/main/webapp/html/settings/sampling-design.html
@@ -46,6 +46,11 @@
 						<div class="hint step-5">
 							<i class="fa fa-hand-o-right"></i>&nbsp;In cluster sampling the population is partitioned into groups, called clusters. 
 							Each element should belong to one cluster only and none of the elements of the population should be left out.
+							<br/>
+							<div class="checkbox" style="text-transform: none;">
+								<!-- <label> <input type="checkbox" name="apply_area_weighted"> Apply area weighted method (by base unit area) </label> -->
+								<button class="btn" name="apply_cluster_only_error">Apply cluster sampling only for variance</button>
+							</div>
 						</div>
 						<div class="hint step-6">
 							<i class="fa fa-hand-o-right"></i>&nbsp;Select which variable is used to join the data with the the lowest level of the hierarchy of the reporting unit. 
