--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -638,6 +638,7 @@
 	<script src="./js/calc/manager/ui/settings/sampling-design/ssu-two-stages-manager.js"></script>
 	<script src="./js/calc/manager/ui/settings/sampling-design/stratum-manager.js"></script>
 	<script src="./js/calc/manager/ui/settings/sampling-design/cluster-manager.js"></script>
+	<!-- <script src="./js/calc/manager/ui/settings/sampling-design/cluster-manager.js"></script> -->
 	<script src="./js/calc/manager/ui/settings/sampling-design/reporting-unit-manager.js"></script>
 	<script src="./js/calc/manager/ui/settings/sampling-design/reporting-unit-import-manager.js"></script>
 	<script src="./js/calc/manager/ui/settings/sampling-design/connection-manager.js"></script>
