added insert/update auxiliary tables

--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -183,6 +183,7 @@
 		  				<button type="button" class="btn btn-default btn-home settings-btn workspace-required" href="html/settings/sampling-design.html">Sampling design</button>
 			 			<button type="button" class="btn btn-default btn-home settings-btn workspace-required" href="categories.html">Categories</button>
 			 			<button type="button" class="btn btn-default btn-home settings-btn workspace-required" href="equation-list.html">External equations</button>
+			 			<button type="button" class="btn btn-default btn-home settings-btn workspace-required" href="auxiliary-tables.html">Auxiliary tables</button>
 		  			</div>
 		  		</div>
 		  		<!-- inventory settings -->
@@ -618,6 +619,10 @@
 	<script src="./js/calc/manager/ui/equation-list-manager.js"></script>
 	<script src="./js/calc/manager/ui/category-edit-manager.js"></script>
 	<script src="./js/calc/manager/ui/category-edit-form-manager.js"></script>
+	
+	<script src="./js/calc/manager/ui/settings/auxiliary-tables/auxiliary-tables-manager.js"></script>
+	<script src="./js/calc/manager/ui/settings/auxiliary-tables/auxiliary-tables-view-manager.js"></script>
+	<script src="./js/calc/manager/ui/settings/auxiliary-tables/auxiliary-tables-edit-manager.js"></script>
 	
 	<!-- settings  -->
 <!-- 	Sampling Design managers -->
