auxiliary tables: added data vis, import/export ws backup, added to processing chain

--- a/calc-webapp/src/main/webapp/auxiliary-tables.html
+++ b/calc-webapp/src/main/webapp/auxiliary-tables.html
@@ -14,17 +14,32 @@
 
 		</div>
 		
-		<div class="col-md-9 height100" style="overflow: auto; padding-left: 5rem;">
-<!-- 			<table class="table equations-table"> -->
-<!-- 		        <thead> -->
-<!-- 		        	<tr> -->
-<!-- 		        		<th>Code</th> -->
-<!-- 		        		<th>Equation</th> -->
-<!-- 		        		<th>Condition</th> -->
-<!-- 	        		</tr> -->
-<!--         		</thead> -->
-<!-- 		        <tbody></tbody> -->
-<!--       		</table> -->
+		<div class="col-md-9 height100 data-table-section data-visualization" style="overflow: auto; padding-left: 5rem;">
+				<div class="row data-table no-margin">
+					<!-- pagination -->
+					<div class="row no-margin">
+						<div class="col-md-1 data-table-buttons no-padding">
+							<button class="btn default-btn csv-export"><i class="fa fa-download"> CSV</i></button>
+						</div>
+						<div class="col-md-3 col-md-offset-7 data-table-pagination">
+						</div>
+						<div class="col-md-1 data-table-buttons no-padding">
+							<button class="btn default-btn prev"><i class="icon-angle-left"></i></button>
+							<button class="btn default-btn next"><i class="icon-angle-right"></i></button>			
+						</div>
+					</div>
+					<!-- data table -->
+					<div class="row no-margin height94" style="overflow: auto">
+<!-- 						<div class="col-md-12 no-padding"> -->
+							<table class="table table-results">
+						        <thead>
+						        </thead>
+						        <tbody>
+						        </tbody>
+					      	</table>
+<!-- 			      		</div> -->
+					</div>
+				</div>
 		</div>
 	</div>
 	
