--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -36,6 +36,7 @@
 	<!-- ==== Custom style ==== -->
 	<link rel="stylesheet" href="css/calc.css">
 	<link rel="stylesheet" href="css/calc/sampling-design/sampling-design.css">
+	<link rel="stylesheet" href="css/calc/auxiliary-tables.css">
 	<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
 	<!--[if lt IE 9]>
       <script src="js/html5shiv.js"></script>
