--- a/calc-webapp/src/main/webapp/error-settings.html
+++ b/calc-webapp/src/main/webapp/error-settings.html
@@ -24,8 +24,11 @@
 		</div>
 	</div>
 	<div class="row width100 no-margin no-padding save-btn height10" style="padding-top: 25px">
-		<button type="submit" class="btn btn-default col-md-offset-5 col-md-2 ">
+		<button type="submit" class="btn btn-save btn-default col-md-offset-4 col-md-2 ">
 			Save
+		</button>
+		<button type="button" class="btn btn-default btn-unselect-all col-md-offset-1 col-md-2">
+			Unselect all
 		</button>
 	</div>
 
