added date variables to data vis section

--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -359,10 +359,13 @@
 					  			data-toggle="tooltip" data-placement="top" title="Categorical variables"  data-animation="true" data-delay="0">C</button>
 				  			<button class="btn blue-btn workspace-enabled" name="t-btn"
 					  			data-toggle="tooltip" data-placement="top" title="Text variables"  data-animation="true" data-delay="0">T</button>
+					  		<button class="btn blue-btn workspace-enabled" name="d-btn"
+					  			data-toggle="tooltip" data-placement="top" title="Date variables"  data-animation="true" data-delay="0">D</button>
 					  	</div>
 					  	<div class="quantities variables width100"></div>
 					  	<div class="categories variables width100"></div>
 					  	<div class="texts variables width100"></div>
+					  	<div class="dates variables width100"></div>
 					  	<div class="view-results-btn height5">
 					  		<button class="btn btn-default workspace-enabled">View <i class="fa fa-caret-right"></i></button>
 					  	</div>
